--- a/CarPlan/MainWindow.xaml
+++ b/CarPlan/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:vcids"
         mc:Ignorable="d"
-        Title="vcibs" Width="1100" Height="650"
+        Title="CarPlan" Width="1100" Height="650"
         MinHeight="600" MinWidth="1000"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
      TextElement.Foreground="{DynamicResource MaterialDesignBody}"
@@ -14,7 +14,7 @@
      TextOptions.TextFormattingMode="Ideal"
      TextOptions.TextRenderingMode="Auto"
      Background="{DynamicResource MaterialDesignPaper}"
-     FontFamily="{DynamicResource MaterialDesignFont}" WindowStartupLocation="CenterScreen" Icon="Resources/logo12.ico" WindowState="Normal">
+     FontFamily="{DynamicResource MaterialDesignFont}" WindowStartupLocation="CenterScreen" Icon="Resources/ogAAAgB_ceA-960.ico" WindowState="Normal">
     <Grid>
         <Frame Name="MainFrame" NavigationUIVisibility="Hidden"></Frame>
     </Grid>
