--- a/CarPlan/Pages/PageAdwerts.xaml
+++ b/CarPlan/Pages/PageAdwerts.xaml
@@ -98,7 +98,8 @@
                                     </TextBlock>
 
                                     <StackPanel Orientation="Horizontal" Grid.Row="4">
-                                        <Button Name="BtnFeedBack" Click="BtnFeedBack_Click">Откликнуться</Button>
+                                        <Button Name="BtnFeedBack" Margin="10" Click="BtnFeedBack_Click">Откликнуться</Button>
+                                        <Button Name="BtnProfilek" Margin="10" Click="BtnProfilek_Click">Отзывы</Button>
                                     </StackPanel>
 
                                 </Grid>
