--- a/CarPlan/Pages/PageSignUp.xaml
+++ b/CarPlan/Pages/PageSignUp.xaml
@@ -36,7 +36,7 @@
 
 
 
-        <Image Grid.ColumnSpan="2" Stretch="Fill"  Grid.Row="0" Grid.RowSpan="8" Source="../Resources/heafer2_bg.jpg"/>
+        <Image Grid.ColumnSpan="2" Stretch="UniformToFill"  Grid.Row="0" Grid.RowSpan="8" Source="../Resources/heafer2_bg.jpg"/>
 
         <TextBlock  Grid.Row="1" Grid.Column="3" HorizontalAlignment="Center"
         Text="Регистрация"
