--- a/CarPlan/Pages/SignIn.xaml
+++ b/CarPlan/Pages/SignIn.xaml
@@ -35,7 +35,7 @@
 
       
 
-        <Image Grid.ColumnSpan="2" Stretch="Fill"  Grid.Row="0" Grid.RowSpan="8" Source="../Resources/header_bg.png"/>
+        <Image Grid.ColumnSpan="2" Stretch="UniformToFill"  Grid.Row="0" Grid.RowSpan="8" Source="../Resources/header_bg.png"/>
 
         <TextBlock  Grid.Row="1" Grid.Column="3" HorizontalAlignment="Center"
         Text="Авторизация"
